packages/compiler/tests/snapshots/template_parse__attr_binding.snap
---
source: tests/template_parse.rs
expression: result
---
Ok(
    [
        Element {
            tag: "span",
            attrs: [
                Binding {
                    name: "class",
                    expr: "cls",
                },
            ],
            children: [],
        },
    ],
)
