packages/compiler/tests/snapshots/template_parse__element_no_attrs.snap
---
source: tests/template_parse.rs
assertion_line: 12
expression: result
---
Ok(
    [
        Element {
            tag: "span",
            attrs: [],
            children: [],
        },
    ],
)
