packages/compiler/tests/snapshots/template_parse__element_static_attrs.snap
---
source: tests/template_parse.rs
assertion_line: 6
expression: result
---
Ok(
    [
        Element {
            tag: "div",
            attrs: [
                Static {
                    name: "class",
                    value: "foo",
                },
                Static {
                    name: "id",
                    value: "bar",
                },
            ],
            children: [],
        },
    ],
)
