packages/compiler/tests/snapshots/template_parse__error_unknown_directive.snap
---
source: tests/template_parse.rs
assertion_line: 48
expression: result
---
Err(
    CompileError {
        message: "unknown directive 'v-show'; aihu v0 supports @event, :attr, and { identifier } only",
        line: 1,
        col: 5,
        code: None,
        hint: None,
        fix: None,
    },
)
