packages/compiler/tests/snapshots/template_parse__error_v_if_directive.snap
---
source: tests/template_parse.rs
assertion_line: 54
expression: result
---
Err(
    CompileError {
        message: "v-if / v-for directives are not supported in v0; see v1 roadmap",
        line: 1,
        col: 5,
        code: None,
        hint: None,
        fix: None,
        from: None,
        to: None,
    },
)
