packages/compiler/tests/snapshots/template_parse__event_binding.snap
---
source: tests/template_parse.rs
assertion_line: 30
expression: result
---
Ok(
    [
        Element {
            tag: "button",
            attrs: [
                Event {
                    name: "click",
                    handler: "increment",
                },
            ],
            children: [],
        },
    ],
)
