packages/compiler/tests/snapshots/template_parse__nested_elements.snap
---
source: tests/template_parse.rs
assertion_line: 42
expression: result
---
Ok(
    [
        Element {
            tag: "div",
            attrs: [],
            children: [
                Element {
                    tag: "span",
                    attrs: [],
                    children: [
                        Text(
                            "hello",
                        ),
                    ],
                },
            ],
        },
    ],
)
