packages/compiler/tests/snapshots/template_parse__plain_text_node.snap
---
source: tests/template_parse.rs
assertion_line: 60
expression: result
---
Ok(
    [
        Text(
            "hello world",
        ),
    ],
)
