packages/compiler/tests/snapshots/template_parse__text_interpolation_mixed.snap
---
source: tests/template_parse.rs
assertion_line: 24
expression: result
---
Ok(
    [
        Element {
            tag: "p",
            attrs: [],
            children: [
                Text(
                    "hello ",
                ),
                Interpolation(
                    "name",
                ),
            ],
        },
    ],
)
