packages/compiler/tests/snapshots/template_parse__text_interpolation_simple.snap
---
source: tests/template_parse.rs
assertion_line: 18
expression: result
---
Ok(
    [
        Element {
            tag: "p",
            attrs: [],
            children: [
                Interpolation(
                    "count",
                ),
            ],
        },
    ],
)
