packages/compiler/tests/snapshots/template_parse__w1_a06_template_literal_interpolation_accepted.snap
---
source: packages/compiler/tests/template_parse.rs
expression: result
---
Ok(
    [
        Element {
            tag: "p",
            attrs: [],
            children: [
                Interpolation(
                    "`Count: ${count}`",
                ),
            ],
        },
    ],
)
