packages/compiler/tests/snapshots/template_parse__w1_a16_regex_in_text_position_accepted.snap
---
source: packages/compiler/tests/template_parse.rs
expression: result
---
Ok(
    [
        Element {
            tag: "p",
            attrs: [],
            children: [
                Interpolation(
                    "/^a/.test(user.name) ? 1 : 0",
                ),
            ],
        },
    ],
)
